<resources>
    <string name="app_name">LOIC Claim Manager</string>
    <string name="footer_txt">Claim Manager v3 - © 2017 LOLC Technologies</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="call_center_remarks">Call center Remarks</string>
    <string name="site_offer">Site Offer</string>
    <string name="facility">Facility</string>
    <string name="excess">Excess</string>
    <string name="sum_insured">Sum Insured</string>
    <string name="yom">YOM</string>
    <string name="contact_no">Contact No</string>
    <string name="customer">Customer</string>
    <string name="location">Location</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="intimation_no">Intimation No</string>
    <string name="inspection">Inspection</string>
    <string name="seq">Seq</string>
    <string name="policy_number">Policy Number</string>
    <string name="assessor_remarks">Assessor Remarks</string>
    <string name="pre_accident_value">Pre Accident Value</string>
    <string name="acr">ACR</string>
    <string name="bald_tire_penalty">Bald Tire Penalty(%)</string>
    <string name="under_insurance_penalty">Under Ins. Penalty(%)</string>
    <string name="payable_amount">Payable Amount</string>
    <string name="repair_completed">Repair Completed</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="salvage_received">Salvage Received</string>
    <string name="settlment_method">Settlement Method</string>
    <string name="onsite_offer">Onsite Offer</string>
    <string name="call_estimate">Call Estimate</string>
    <string name="onsite_offer_amount">Onsite Offer Amount</string>
    <string name="police_report_request">Police Report Request</string>
    <string name="special_remarks">Special Remarks</string>
    <string name="investigate_claim">Invastigate Claim</string>
    <string name="inspection_remarks">Inspection Remarks</string>
    <string name="assessor_payment">Assessor Payment</string>
    <string name="professional_fee">Proffessional Fee</string>
    <string name="mileage">Mileage</string>
    <string name="telephone">Telephone</string>
    <string name="photo_count">Photo Count</string>
    <string name="photo_charges">Photo Charges</string>
    <string name="other_charges">Other Charges</string>
    <string name="total_charges">Total Charges</string>
    <string name="reason">Reason</string>
    <string name="save">Save</string>
    <string name="inspected_date">Inspected Date</string>
    <string name="asterix">*</string>
    <string name="inspected_time">Inspected Time</string>
    <string name="delete">Delete</string>
    <string name="enable">Enable</string>
    <string name="information_mobile_help_desk">Application Related Issues : 011 5 00 13 53 / 077 5 50 50 90</string>
    <string name="information_help_desk">Hardware Related Issues : 011 5 00 12 34</string>
    <string name="information_admin">Internet/Network Issues : Admin Office</string>
    <string name="email">E-Mail : loitsmobilesolutions@lolctech.com</string>
</resources>
