<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_centerInParent="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:paddingBottom="13dip"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:paddingTop="5dip"
        android:layout_margin="10dip">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/logo_loits"/>

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information_help_desk"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:maxLines="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/information_mobile_help_desk"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:maxLines="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/information_help_desk"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dip"
        android:maxLines="1"
        android:layout_gravity="center_horizontal"
        android:text="@string/information_admin"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dip"
            android:maxLines="1"
            android:layout_gravity="center_horizontal"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>
