<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:orientation="vertical"
        android:scrollbars="vertical">

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/textViewInitVehicle"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.61"
                        android:text="@string/vehicle_number" />

                    <EditText
                        android:id="@+id/editTextVehicleNo"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:hint="@string/vehicle_number"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout3"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitIntim"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.61"
                        android:text="@string/intimation_no" />

                    <EditText
                        android:id="@+id/editTextIntimationNo"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:hint="@string/intimation_no"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout4"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitInsType"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.44"
                        android:text="@string/inspection" />

                    <Spinner
                        android:id="@+id/spinnerInspectionType"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.72" />

                    <!-- <EditText
                         android:id="@+id/txt_init_seq"
                         android:layout_width="42dp"
                         android:layout_height="40dp"
                         android:inputType="none"
                         android:hint="@string/seq"
                         android:imeOptions="actionNext"
                         android:maxLines="1" />-->
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout5"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitPolicy"
                        android:layout_width="50dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.44"
                        android:text="@string/policy_number" />

                    <EditText
                        android:id="@+id/editTextPolicyNo"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.72"
                        android:hint="@string/policy_number"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout6"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitLoc"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.38"
                        android:text="@string/location" />

                    <EditText
                        android:id="@+id/editTextLocation"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.72"
                        android:hint="@string/location"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout7"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitCaller"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.38"
                        android:text="@string/customer" />

                    <EditText
                        android:id="@+id/editTextCaller"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.72"
                        android:hint="@string/customer"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout8"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitContNo"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.37"
                        android:text="@string/contact_no" />

                    <EditText
                        android:id="@+id/editTextContactNo"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.72"
                        android:autoLink="phone"
                        android:hint="@string/contact_no"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout9"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitYom"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.38"
                        android:text="@string/yom" />

                    <EditText
                        android:id="@+id/editTextYOM"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.72"
                        android:hint="@string/yom"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout10"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitSumInsured"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.38"
                        android:text="@string/sum_insured" />


                    <EditText
                        android:id="@+id/editTextSumInsured"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.72"
                        android:hint="@string/sum_insured"
                        android:inputType="none"
                        android:maxLines="1" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout11"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitExcess"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.39"
                        android:text="@string/excess" />

                    <EditText
                        android:id="@+id/editTextExcess"
                        android:layout_width="90dp"
                        android:layout_height="40dp"
                        android:layout_weight="0.72"
                        android:hint="@string/excess"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout12"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitFac"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.4"
                        android:text="@string/facility" />

                    <CheckBox
                        android:id="@+id/checkBoxFacility"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:clickable="false" />

                    <TextView
                        android:id="@+id/textViewInitSiteOffer"
                        android:layout_width="56dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.4"
                        android:text="@string/site_offer" />

                    <CheckBox
                        android:id="@+id/checkBoxSiteOffer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.1"
                        android:clickable="false" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayout13"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/textViewInitRemark"
                        android:layout_width="60dp"
                        android:layout_height="35dp"
                        android:layout_weight="0.4"
                        android:text="@string/call_center_remarks" />

                    <EditText
                        android:id="@+id/editTextCallCenterRemarks"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.6"
                        android:gravity="top"
                        android:hint="@string/call_center_remarks"
                        android:inputType="none"
                        android:maxLines="1" />
                </LinearLayout>


                <!-- <LinearLayout
                     android:id="@+id/LinearLayout14"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content">

                     <Button
                         android:id="@+id/btnApprove"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
                         android:text="@string/accept" />

                     <Button
                         android:id="@+id/btnReject"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="0.5"
                         android:text="@string/reject" />
                 </LinearLayout>-->


            </LinearLayout>

            <FrameLayout
                android:id="@+id/progressBarHolder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.4"
                android:animateLayoutChanges="true"
                android:background="@color/silver"
                android:visibility="gone">

                <ProgressBar
                    style="@style/CircularProgress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_gravity="center" />
            </FrameLayout>

</RelativeLayout>